add update cart docs
